# tracelite

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  tracelite.db  tracelite.toml  tracelite.toml.sample
.github/workflows/: ci.yml  release.yml  test.yml
docs/: configuration.md  contributing.md  development.md  index.md  installation.md  usage.md
examples/django_demo/: README.md  manage.py
examples/django_demo/app/: views.py
examples/django_demo/demo/: settings.py  urls.py
examples/fastapi_demo/: README.md  app.py
examples/flask_demo/: README.md  app.py
scripts/: bump_version.py
src/tracelite/cli/: main.py
src/tracelite/core/: config.py  filters.py  models.py
src/tracelite/core/storage/: base.py  sqlite.py
src/tracelite/middleware/: django.py  fastapi.py  flask.py
src/tracelite/ui/: viewer.py
tests/: test_config.py  test_demo_fastapi_app.py  test_demo_flask_middleware.py  test_django_middleware.py  test_filters.py  test_storage.py  test_viewer.py
