[tool.poetry]
name = "tracelite"
version = "0.2.0"
description = "Lightweight request & response tracing for your Flask, Django, or FastAPI dev server"
authors = ["Yeongseon Choe <yeongseon.choe@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "tracelite", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = "^2.6"
typer = "^0.15"
rich = "^13.7"
sqlalchemy = "^2.0"
tomli = "^2.0"
flask = "^3.0"
fastapi = "^0.115.12"
starlette = "^0.46.1"
httpx = "^0.28.1"
django = "^4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^5.0.0"
tomli-w = "^1.2.0"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[tool.poetry.extras]
flask = ["flask"]
fastapi = ["fastapi", "starlette", "httpx"]
django = ["django"]

[tool.poetry.scripts]
tracelite = "tracelite.cli.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
